finally debugged weird bug that prevented the new scores to be shown unless the page refreshed. Moving to wrap up the project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 
 
 
-
+/* This is the header section that contains the option to view scoreList, see the time remaining and your current score */
 header {
     display: flex;
     justify-content: space-between;
@@ -33,8 +33,19 @@ header {
     margin: 200px auto;
 }
 
-#start-button {
+.endButtons {
     margin: 0 auto;
+    width: 200px;
+}
+
+.score-results {
+    text-align: center;
+    margin: 50px auto;
+    font-size: 20px;
+}
+
+#start-button {
+    margin: 0 30px;
     width: 200px;
 
 }
@@ -62,6 +73,10 @@ header {
     font-size: 20px;
 }
 
+.completion-h3 {
+    text-align: center;
+    font-size: 32px;
+}
 
 
 #results-box {
